Extract Form Field Data from PDF

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <input type="file" id="input-button" accept="application/pdf"/>
+        <p id="test-fields"></p>
     </div>
 </body>
 </html>
