--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <input type="file" id="input-button" accept="application/pdf"/>
-        <p id="test-fields"></p>
+        <div id="test-fields"></div>
     </div>
 </body>
 </html>
