--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.7.570/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.9.1/mermaid.min.js"></script>
     <script>mermaid.initialize({ startOnLoad: true });</script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="container">
