--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.7.570/pdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.9.1/mermaid.min.js"></script>
     <script>mermaid.initialize({ startOnLoad: true });</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <div class="container">
         <div class="header">
             <input type="file" id="input-button" accept="application/pdf"/>
+            <button id="save-png">SAVE</button>
         </div>
         <div id="test-fields"></div>
         <div id="flowchart">
