--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <input type="file" id="input-button" accept="application/pdf"/>
             <button id="save-png">SAVE</button>
         </div>
+        <div class="popup" id="popup">
+            <div class="popup-content">
+                <span class="close" id="popup-close">&times;</span>
+                <h2>Under Construction!</h2>
+                <p>This page is still a work in progress.</p> <hr>
+                <h4>To Use:</h4>
+                <ul>
+                    <li>Upload a filled out Character Sheet PDF (ex. from D&D Beyond)</li>
+                    <li>Left-click to add a child node. Right-click to delete</li>
+                </ul>
+            </div>
+        </div>        
+
         <div id="test-fields"></div>
         <div id="flowchart">
         </div>
