--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <ul>
                     <li>Upload a filled out Character Sheet PDF (ex. from D&D Beyond)</li>
                     <li>Left-click to add a child node. Right-click to delete</li>
+                    <li>Refresh the page before selecting a new sheet. (I'll fix that soon. Hopefully.)</li>
                 </ul>
             </div>
         </div>        
