--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+    <p id="credit">Hi I'm Azaaraf. I don't know what Copyright stuff goes here. I don't own D&D?</p>
     <div class="container">
         <div class="header">
-            <input type="file" id="input-button" accept="application/pdf"/>
-            <button id="save-png">SAVE</button>
+            <div class="header-left">
+                <input type="file" id="input-button" accept="application/pdf"/>
+                <button id="save-png">SAVE</button>
+            </div>
+            <h2>D&D Combat Flowchart Builder</h2>
         </div>
         <div class="popup" id="popup">
             <div class="popup-content">
