--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="header-left">
                 <input type="file" id="input-button" accept="application/pdf"/>
                 <button id="save-png">SAVE</button>
+                <button id="help-button">?</button>
             </div>
             <h2>D&D Combat Flowchart Builder</h2>
         </div>
