--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
                 <button id="save-png">SAVE</button>
                 <button id="help-button">?</button>
             </div>
-            <h2>D&D Combat Flowchart Builder</h2>
+            <h2 class="title">D&D Combat Flowchart Builder</h2>
+            <button id="toggle-header"> << </button>
         </div>
         <div class="popup" id="popup">
             <div class="popup-content">
