--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <p id="credit">Hi I'm Azaaraf. I don't know what Copyright stuff goes here. I don't own D&D?</p>
+    <p id="credit"><a target="_blank" href="https://x.com/IlaZaaraF">Azaaraf</a></p>
     <div class="container">
         <div class="header">
             <div class="header-left">
