--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 
         <div id="test-fields"></div>
         <div id="flowchart">
+        <div id="test-flowchart" class="mermaid">
+            %%{init: {'theme': 'dark'}}%%
+            flowchart TD;
+            A{{Get Started!}} --> B[Load a Character Sheet PDF]
+            B ---> |"Fillable Field PDF <br> ex. from D&DBeyond"|C[Edit the Flowchart]
+            C --> D[Click on a node to add a child]
+            C --> E[Right-Click to delete a node]
+        </div>
         </div>
     </div>
 </body>
