--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             flowchart TD;
             A{{Get Started!}} --> B[Load a Character Sheet PDF]
             B ---> |"Fillable Field PDF <br> ex. from D&DBeyond"|C[Edit the Flowchart]
-            C --> D[Click on a node to add a child]
-            C --> E[Right-Click to delete a node]
+            C --> D([Click on a node to add a child])
+            C --> E([Right-Click to delete a node])
         </div>
         </div>
     </div>
