--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         <div id="test-fields"></div>
         <div id="flowchart">
+        </div>
         <div id="test-flowchart" class="mermaid">
             %%{init: {'theme': 'dark'}}%%
             flowchart TD;
@@ -47,6 +48,11 @@
             C --> D([Click on a node to add a child])
             C --> E([Right-Click to delete a node])
         </div>
+
+        <div class="context-menu">
+            <div class="menu-item">Add</div>
+            <div class="menu-item">Delete</div>
+            <div class="menu-item">Edit</div>
         </div>
     </div>
 </body>
