--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="context-menu">
             <div class="menu-item">Add</div>
             <div class="menu-item">Delete</div>
-            <div class="menu-item">Edit</div>
+            <div class="menu-item">Can't Edit Yet</div>
         </div>
     </div>
 </body>
