--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="context-menu">
             <div class="menu-item">Add</div>
             <div class="menu-item">Delete</div>
-            <div class="menu-item">Can't Edit Yet</div>
+            <div class="menu-item"><s>Edit</s></div>
         </div>
     </div>
 </body>
