Initiative and AC

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>This page is still a work in progress.</p> <hr>
                 <h4>To Use:</h4>
                 <ul>
-                    <li>Upload a filled out Character Sheet PDF (ex. from D&D Beyond)</li>
+                    <li>Upload a Character Sheet PDF from D&D Beyond</li>
                     <li>Left-click to add a child node. Right-click to delete</li>
                     <li>Refresh the page before selecting a new sheet. (I'll fix that soon. Hopefully.)</li>
                 </ul>
