Node Menu - Set up and Styling

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
         <div class="context-menu">
             <div class="menu-item">Add</div>
             <div class="menu-item">Delete</div>
-            <div class="menu-item"><s>Edit</s></div>
+            <div class="menu-item">Edit</div>
+        </div>
+        <div class="node-menu">
+            <label for="menu-input">Description:</label><br>
+            <textarea name="menu-input" id="menu-input" placeholder="Type here..." rows="2" cols="30"></textarea>
+            <br><button type="button">Enter</button>
         </div>
     </div>
 </body>
