Add and Edit from Node Menu

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="node-menu">
             <label for="menu-input">Description:</label><br>
             <textarea name="menu-input" id="menu-input" placeholder="Type here..." rows="2" cols="30"></textarea>
-            <br><button type="button">Enter</button>
+            <br><button type="button" id="menu-submit">Enter</button>
         </div>
     </div>
 </body>
