--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </div>        
 
-        <div id="flowchart">
+        <div id="flowchart" class="flowchart">
         </div>
         <div id="test-flowchart" class="mermaid">
             %%{init: {'theme': 'dark'}}%%
