--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script>mermaid.initialize({ startOnLoad: true });</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png?">
 </head>
 <body>
     <p id="credit"><a target="_blank" href="https://x.com/IlaZaaraF">Azaaraf</a></p>
