--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="container">
         <div class="header">
             <div class="header-left">
+                <img src="img/icon64_a.png" alt="">
                 <input type="file" id="input-button" accept="application/pdf"/>
                 <button id="save-png">SAVE</button>
                 <button id="help-button">?</button>
