Close Node Menu

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="header-left">
                 <img src="img/icon64_a.png" alt="">
                 <input type="file" id="input-button" accept="application/pdf"/>
-                <button id="save-png">SAVE</button>
+                <button id="save-png">SAVE PNG</button>
                 <button id="help-button">?</button>
             </div>
             <h2 class="title">D&D Combat Flowchart Builder</h2>
@@ -62,6 +62,7 @@
             <div class="menu-item">Edit</div>
         </div>
         <div class="node-menu">
+            <span class="close-node-menu">&times;</span>
             <label for="menu-input">Description:</label><br>
             <textarea name="menu-input" id="menu-input" placeholder="Type here..." rows="2" cols="30"></textarea>
             <br><button type="button" id="menu-submit">Enter</button>
