--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon16.png?">
+    <link rel="icon" type="image/png" sizes="64x64" href="img/icon64_a.png?">
 </head>
 <body>
     <p id="credit"><a target="_blank" href="https://x.com/IlaZaaraF">Azaaraf</a></p>
