Undo Button Set Up

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="header-left">
                 <img src="img/icon64_a.png" alt="">
                 <input type="file" id="input-button" accept="application/pdf"/>
+                <button id="undo-button">UNDO</button>
                 <button id="save-png">SAVE PNG</button>
                 <button id="help-button">?</button>
             </div>
